--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "custom-login-server": "node custom-login/server.js",
     "test:custom-login": "protractor okta-oidc-tck/e2e-tests/custom-login/conf.js",
     "okta-hosted-login-server": "node okta-hosted-login/server.js",
+    "start": "node okta-hosted-login/server.js",
     "test:okta-hosted-login": "protractor okta-oidc-tck/e2e-tests/okta-hosted-login/conf.js",
     "resource-server": "node resource-server/server.js",
     "test:resource-server": "jasmine okta-oidc-tck/resource-server/specs/okta-resource-server-spec.js",
@@ -23,18 +24,18 @@
     "webdriver-update-2.45": "webdriver-manager update --versions.standalone=3.141.59 --versions.chrome 2.45 --gecko false && node scripts/setup-env.js"
   },
   "devDependencies": {
-    "axios": "^0.26.1",
+    "axios": "^1.7.4",
     "find-process": "^1.4.3",
-    "forever-monitor": "^1.5.2",
+    "forever-monitor": "^3.0.3",
     "jasmine": "^3.6.1",
     "jasmine-reporters": "^2.5.0",
     "platform": "^1.3.6",
-    "protractor": "^7.0.0",
-    "wait-on": "^5.2.0"
+    "protractor": "^3.3.0",
+    "wait-on": "^8.0.0"
   },
   "dependencies": {
-    "@okta/jwt-verifier": "1.0.0",
-    "@okta/oidc-middleware": "^4.0.1",
+    "@okta/jwt-verifier": "^4.0.0",
+    "@okta/oidc-middleware": "^5.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
